2017-02-06  Seth S. Wenchel  <wenchel@gmail.com>

	* R/isValid.R: New (unexported) helper functions .isValidLey,
	.isValidDevice, .isValidChannel

2017-02-04  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/pushes.R (pbPost): Correct target device designation

	* attic/pbpost.r (localPbPost): Test script by Seth, slight mod'ed

2017-02-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.0

2017-02-02  Dirk Eddelbuettel  <edd@debian.org>

	* R/pushes.R (pbPost): Use 'target_device_ind', not 'device_ind'

	* R/setup.R (pbSetup): Use 'pretty=TRUE' for nicer output

	* man/pbPost.Rd: Remove reference to unsupported type 'address'
	* man/rpushbullet-package.Rd: Idem

	* tests/simpleTests.R: Changed to be less agressive and run failing
	tests only if environment variable Run_RPushbullet_Tests_All is 'yes'

	* README.md: Updated and expanded

2017-02-01  Seth S. Wenchel  <wenchel@gmail.com>

	* R/setup.R: Write single elements as vectors instead of lists

2017-01-31  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Minor edits, more canonical URLs

	* .travis.yml: Use https for curl download

2017-01-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version and date

2017-01-30  Seth S. Wenchel  <wenchel@gmail.com>

	* R/setup.R (pbSetup): Check return code from pbGetDevices(); flag an
	error if no device is associated with the supplied key; fixed typo

	* R/init.R (.checkReturnCode): Move function here

2017-01-28  Dirk Eddelbuettel  <edd@debian.org>

	* R/setup.R (pbSetup): New function, extending PR by Seth Wenchel

	* R/init.R (.onLoad): Also load dotfile, permitted use for
	un-attached package
	(.onAttach): Improved message formatting, simpler environment use
	(.getDotfile): New helper for default dotfile
	(.parseResourceFile): Simpler environment use

	* .travis.yml: Switch to using run.sh for Travis CI
	* NAMESPACE: Minor edit