@@ -1,3 +1,8 @@
+2017-02-11  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .rpushbullet.json.enc: Encoded configuration
+	* .travis.yml: Decode configuration and run tests and coverage
+
 2017-02-06  Seth S. Wenchel  <wenchel@gmail.com>
 
 	* R/isValid.R: New (unexported) helper functions .isValidLey,
